--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+
+#apiKey
+/api.env.ts
+
 # Compiled output
 /dist
 /tmp
